# ai-engineer-roadmap

./: .gitignore  CODEX.md  DECISIONS.md  PROGRESS.md  README.md  ROADMAP.md  TASKS.md
.github/: copilot-instructions.md
ai-engineer-roadmap/: README.md
ai-engineer-roadmap/phase-01-python/: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
ai-engineer-roadmap/phase-01-python/migrations/: env.py
ai-engineer-roadmap/phase-01-python/migrations/versions/: 651c16e02b39_create_analysis_runs_table.py  6ee40cc8e639_create_notes_table.py  db220f8d2751_add_analysis_history_ordering_index.py
ai-engineer-roadmap/phase-01-python/src/ai_roadmap/: ai_client.py  analysis_repository.py  api.py  database.py  notes_repository.py  notes_service.py  prompts.py  routes.py  schemas.py  text_stats.py
ai-engineer-roadmap/phase-01-python/tests/: test_ai_client.py  test_analysis_repository.py  test_api.py  test_database.py  test_notes_repository.py  test_notes_service.py  test_prompts.py  test_schemas.py  test_text_stats.py
ai-engineer-roadmap/phase-04-react-ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: portfolio-criteria.md  weekly-review.md
lessons/phase-01-python/: lesson-01-project-setup.md  lesson-02-text-statistics.md  lesson-03-testing-and-quality.md
lessons/phase-02-fastapi/: lesson-01-fastapi-basics.md  lesson-02-request-validation.md  lesson-03-error-handling.md  lesson-04-api-testing.md  lesson-05-api-project-structure.md  (+2 more)
templates/: decision-template.md  lesson-template.md  progress-entry-template.md
(+54 files in other folders)
